Transferred from the Adobe Open Source Subversion Repository
Revision: 5082
Author:   jszeto@adobe.com
Date:     2009-02-26T01:30:44.174297Z

Log Message: 
-----------
Initial version of DropDownList

Working version of DropDownList (non-editable ComboBox) and its base class DropDownBase. It currently only supports very basic functionality.

- No Keyboard functionality
- Basic mouse functionality
- Support for dataProvider
- Limited support for selectedIndex, itemRenderer
- No support for selectedIndex, labelField, labelFunction
- No support for prompt

Adding new component PopUp. This component is used to position a dropDown in layout. Since a dropDown is added to the display list via the PopUpManager, it doesn't normally participate in layout. The PopUp component is a UIComponent that does get added to a container and thus is laid out. It is responsible for then sizing and positioning the dropDown relative to itself.

The PopUp implementation is very early prototype from Ely. Don't expect anything but the basic case to work. 

QE Notes: None
Doc Notes: None
Bugs: n/a
Reviewer: None

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/manifest.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/PopUp.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/DropDownListButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/DropDownList.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/DropDownListSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="A">/flex/sdk/t

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -38,6 +38,11 @@ FxCheckBox
     textAlign: "start";
 }
 
+DropDownList
+{
+	skinClass: ClassReference("mx.skins.spark.DropDownListSkin");
+}
+
 FxComponent
 {
     focusSkin: ClassReference("mx.skins.spark.FxFocusSkin");
