Transferred from the Adobe Open Source Subversion Repository
Revision: 5104
Author:   clucier@adobe.com
Date:     2009-02-27T14:51:34.248850Z

Log Message: 
-----------
Default button support for Spark containers and editable text controls.
QE Notes: 
Doc Notes: 
Bugs: SDK-19420
Reviewer: Glenn, Gordon

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/baseClasses/FxContainerBase.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/core/ContainerGlobals.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/managers/IFocusManagerContainer.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/controls/colorPickerClasses/SwatchPanel.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/controls/Menu.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/managers/FocusManager.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/TextView.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxDefaultButtonSkin.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274824 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -22,25 +22,30 @@ FxApplication
 FxButton
 {
     lineBreak: "explicit";
-	skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
-	textAlign: "center";
-	verticalAlign: "middle";
+    skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
+    textAlign: "center";
+    verticalAlign: "middle";
+}
+
+FxButton.emphasized
+{
+    skinClass: ClassReference("mx.skins.spark.FxDefaultButtonSkin");
 }
 
 FxButtonBar
 {
-	skinClass: ClassReference("mx.skins.spark.FxButtonBarSkin");
+    skinClass: ClassReference("mx.skins.spark.FxButtonBarSkin");
 }
 
 FxCheckBox
 {
-	skinClass: ClassReference("mx.skins.spark.FxCheckBoxSkin");
+    skinClass: ClassReference("mx.skins.spark.FxCheckBoxSkin");
     textAlign: "start";
 }
 
 DropDownList
 {
-	skinClass: ClassReference("mx.skins.spark.DropDownListSkin");
+    skinClass: ClassReference("mx.skins.spark.DropDownListSkin");
 }
 
 FxComponent
