Transferred from the Adobe Open Source Subversion Repository
Revision: 5215
Author:   rfrishbe@adobe.com
Date:     2009-03-10T01:39:37.388950Z

Log Message: 
-----------
Initial checkin for FxVideoDisplay.  FxVideoDisplay is the new skinnable video component in Gumbo.  VideoElement is the new chromeless video component in Gumbo.

As part of this checkin, a new swc was added to the libs directory, videoPlayer.swc, which holds the underlying FLVPlackback VideoPlayer we are using today in VideoElement.

Multi-bit rate support hasn't been added yet, the skin could use a lot of work, and work needs to be done on state/skinstate support.  Otherwise, most things should be working.

QE Notes: You can start testing :-)
Doc Notes: -
Bugs: -
Reviewer: Deepa
tests: checkintests

Modified Paths:
--------------
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/events/VideoEvent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/libs/videoPlayer.swc</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxVideoDisplay.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/graphics/VideoElement.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxVideoDisplayPlayPauseButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/events/MetadataEvent.as</path>
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/skins/spark/FxVideoDisp

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -122,6 +122,11 @@ FxToggleButton
 	verticalAlign: "middle";
 }
 
+FxVideoDisplay
+{
+    skinClass: ClassReference("mx.skins.spark.FxVideoDisplaySkin");
+}
+
 FxVScrollBar
 {
 	skinClass: ClassReference("mx.skins.spark.FxVScrollBarSkin");
