Transferred from the Adobe Open Source Subversion Repository
Revision: 5223
Author:   egeorgie@adobe.com
Date:     2009-03-10T20:10:07.223108Z

Log Message: 
-----------
Introduce ButtonBase and ToggleButtonBase classes and make FxButton extend ButtonBase, ToggleButtonBase extend ButtonBase, FxToggleButton, FxCheckBox, FxRadioButton extend ToggleButtonBase.as.
The emphasized property and IButton are pushed down to the FxButton, so the rest of the buttons don't have them.

QE Notes: None
Doc Notes:
Bugs: SDK-19671, SDK-19670
Reviewer: Glenn
tests: checkintests, mustella (gumbo/components)

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxCheckBox.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxRadioButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/mxml-2009-manifest.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/FxToggleButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/ButtonBarButton.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/baseClasses/ButtonBase.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/mx/components/baseClasses/ToggleButtonBase.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274826 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -19,12 +19,16 @@ FxApplication
     backgroundColor: #FFFFFF;
 }
 
-FxButton
+ButtonBase
 {
     lineBreak: "explicit";
-    skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
     textAlign: "center";
     verticalAlign: "middle";
+}
+
+FxButton
+{
+    skinClass: ClassReference("mx.skins.spark.FxButtonSkin");
 }
 
 FxButton.emphasized
@@ -118,8 +122,6 @@ FxTextInput
 FxToggleButton
 {
 	skinClass: ClassReference("mx.skins.spark.FxToggleButtonSkin");
-	textAlign: "center";
-	verticalAlign: "middle";
 }
 
 FxVideoDisplay
