Transferred from the Adobe Open Source Subversion Repository
Revision: 5859
Author:   rfrishbe@adobe.com
Date:     2009-04-01T23:13:22.675548Z

Log Message: 
-----------
Adding FLVPlayback source code to Flex 4 project, rather than using a pre-built SWC.  

Some video PARB changes:

Class Name Changes:
Rename VideoDisplay -> VideoPlayer
Combine MetadataEvent and VideoEvent into VideoEvent

Video property/method changes:
isLive -> live
isPlaying -> playing
isMuted -> muted
mute(), unmute() -> muted getter/setter

Also fixed a bug where VideoPlayer wasn't properly re-dispatching events.

QE Notes: -
Doc Notes: -
Bugs: -
Reviewer: Deepa
tests: checkintests

Modified Paths:
--------------
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/video/VideoScaleMode.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/events/VideoEvent.as</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VideoDisplayPlayPauseButtonSkin.mxml" copyfrom-rev="5766" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VideoPlayerPlayPauseButtonSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/video/ConnectClient.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/video/flvplayback_internal.as</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/VideoDisplay.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/video/NCManager.as</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/libs/videoPlayer.swc</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/video/VideoProgressEvent.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/video</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/fl/vide

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -126,9 +126,9 @@ ToggleButton
 	skinClass: ClassReference("spark.skins.default.ToggleButtonSkin");
 }
 
-VideoDisplay
+VideoPlayer
 {
-    skinClass: ClassReference("spark.skins.default.VideoDisplaySkin");
+    skinClass: ClassReference("spark.skins.default.VideoPlayerSkin");
 }
 
 VScrollBar
