Transferred from the Adobe Open Source Subversion Repository
Revision: 6359
Author:   gruehle@adobe.com
Date:     2009-04-28T20:58:40.137689Z

Log Message: 
-----------
Add error skin for Spark components. The error skin is a separate skin, handled in a similar manner as the focus skin. It is shown whenever the errorString property is non-empty. The default implementation overlays a red border on top of the component.

Fixed the font size for tooltips/error tips.

Bugs: SDK-19559, SDK-19495
QE: Yes - spark tests for errorString/validation failure need to be added
Doc: Yes - new errorSkin style on SkinnableComponent
Reviewer: Ryan

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/SparkSkin.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/FocusSkin.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/Flex4Classes.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/SkinnableComponent.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/ErrorSkin.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274833 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -47,6 +47,7 @@ DropDownList
 
 SkinnableComponent
 {
+    errorSkin: ClassReference("spark.skins.default.ErrorSkin");
     focusSkin: ClassReference("spark.skins.default.FocusSkin");
 }
 
