Transferred from the Adobe Open Source Subversion Repository
Revision: 6404
Author:   rfrishbe@adobe.com
Date:     2009-04-30T00:34:09.399480Z

Log Message: 
-----------
Finishing up VideoPlayer/VideoElement. Added support for streaming videos and fixed a few of the bugs.  Added the skins from XD.  These still need a little tweaking, and I'll go over them with XD. For the skins, I had to add some new sub-components, like the VideoPlayerVolumeBar and VideoPlayScrubBar.

Also added 3 new events for TrackBase (thumbDrag, thumbPress, thumbRelease).  These were in Halo's Slider, and I needed them for the VideoPlayerScrubBar.

Also fixed some other bugs, like needing to call removeDynamicPartInstance() on the Slider when the dataTip is removed.  Also fixed a bug around alternatingItemsColor for ItemRenderer.

QE Notes: -
Doc Notes: -
Bugs: SDK-19486, SDK-20105, SDK-20789
Reviewer: Glenn, Jason
tests: checkintests, some mustella tests were failing, but seemed like random 1 pixel differences in DropDownList.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/primitives/supportClasses/GraphicElement.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/VideoPlayerVolumeBarMuteButton.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VideoPlayerPlayPauseButtonSkin.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/DropDownList.as</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VideoPlayerScrubBarSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VideoPlayerFullScreenVolumeBarTrackSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/skins/default/VideoPlayerFullScreenVolumeBarMuteButtonSkin.mxml</path>
<pat

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -121,9 +121,24 @@ VideoPlayer
     skinClass: ClassReference("spark.skins.default.VideoPlayerSkin");
 }
 
+VideoPlayerScrubBar
+{
+    skinClass: ClassReference("spark.skins.default.VideoPlayerScrubBarSkin");
+}
+
+VideoPlayerVolumeBar
+{
+    skinClass: ClassReference("spark.skins.default.VideoPlayerVolumeBarSkin");
+}
+
+VideoPlayerVolumeBarMuteButton
+{
+    skinClass: ClassReference("spark.skins.default.VideoPlayerVolumeBarMuteButtonSkin");
+}
+
 VScrollBar
 {
-	skinClass: ClassReference("spark.skins.default.VScrollBarSkin");
+    skinClass: ClassReference("spark.skins.default.VScrollBarSkin");
 }
 
 VSlider
