Transferred from the Adobe Open Source Subversion Repository
Revision: 7287
Author:   chaase@adobe.com
Date:     2009-05-26T21:29:39.221182Z

Log Message: 
-----------
Changed fixedThumbSize and smoothScrolling properties on ScrollBar to be styles instead, per a recent ARB decision.

QE Notes: None
Doc Notes: None
Bugs: sdk-21031
Reviewer: Glenn
tests: checkintests mustella gumbo/ScrollBar gumbo/Scroller

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/Scroller.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/SkinnableContainer.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/VScrollBar.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/HScrollBar.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/ScrollBar.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/GroupBase.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274835 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -148,6 +148,7 @@ VSlider
 
 global
 {
+    /* Looks */
     /* color: #000000; */
     baseColor: #CCCCCC;
     contentBackgroundColor: #FFFFFF;
@@ -155,5 +156,9 @@ global
     selectionColor: #A8C6EE;
     focusColor: #70B2EE;
     symbolColor: #000000;
+    
+    /* Behaviors */
+    fixedThumbSize: false;
     slideDuration: 300;
+    smoothScrolling: true;
 }
