Transferred from the Adobe Open Source Subversion Repository
Revision: 7472
Author:   chaase@adobe.com
Date:     2009-06-01T17:57:10.489577Z

Log Message: 
-----------
Changing a handful of behavior-related properties to styles instead, for usability and consistency:
Scroller.horizontalScrollPolicy
Scroller.verticalScrollPolicy
TextArea.horizontalScrollPolicy
TextArea.verticalScrollPolicy
Slider.liveDragging

Also made previous properties-as-styles changes (smoothScrolling and fixedThumbSize) not inheritable and not exposed in SkinnableContainer/GroupBase.


QE Notes: Requires Mustella updates to handle changes from properties to styles
Doc Notes: 
Bugs: sdk-21032
Reviewer: Glenn
Tests: checkintests, Mustella gumbo/components/Scroller, gumbo/components/ScrollBar, gumbo/components/TextArea/, and gumbo/components/Slider

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/Scroller.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/SkinnableContainer.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/Slider.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/TextArea.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/ScrollBar.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/ScrollerLayout.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/defaults.css</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/src/spark/components/supportClasses/GroupBase.as</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274836 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -159,6 +159,9 @@ global
     
     /* Behaviors */
     fixedThumbSize: false;
+    horizontalScrollPolicy: "auto";
+    liveDragging: false;
     slideDuration: 300;
     smoothScrolling: true;
+    verticalScrollPolicy: "auto";
 }
