Transferred from the Adobe Open Source Subversion Repository
Revision: 7537
Author:   rfrishbe@adobe.com
Date:     2009-06-03T20:25:36.987268Z

Log Message: 
-----------
VideoPlayer fixes, including focus fixes and some other fixes.

For Focus:

SkinnableComponent: 
- Now check the drawFocusAnyway flag before checking for focusManager.getFocus() != this because in the case of the video player volume bar, we don’t actually have a focusManager

TrackBase:
- Override of focusIn/OutHandler wasn’t calling super.focusIn/OutHandler().

Slider:
- Now instead of overriding setFocus() and calling stage.focus = thumb, we just override drawFocus() and tell the thumb to drawFocus().  This means we keep the focus ourselves and handle the keyDown events on ourself rather than on the thumb.  

FocusSkin:
- Change the exit-early logic so that we don’t exit if we have no focusManager...we only exit if we don’t have a focusObject (and we sometimes rely on the focusManager for this focusObject).  FocusObject actually gets slammed in via SkinnableComponent, so this should be fine.

VideoPlayerVolumeBar:
- On focus in, open the drop down, validate it, and draw the focus on thumb.

VideoPlayer:
- set tabChildren = true so we can tab into the components

Skins (VideoPlayerSkin.mxml only):
- Change the layer of focused components with: focusIn="event.target.layer=1" focusOut="event.target.layer=0"


Other Changes:

TrackBase:
- Add official CHANGING event.  Work still needs to be done on dispatching it in all cases correctly.
- Remove the check for (!enabled) in the thumb_mouseDownHandler...this shouldn’t be needed thanks to Jason’s change.  We do this in Scroller as well, and I’ve got a local change for that which will come later as part of the Change/Changing ARB issue fix.

PopUpAnchor:
- Needs to take into account the fullScreenRect to get the popup to display correctly in those cases.

FlexEvent: 
- Adding CHANGING event.

VideoPlayerScrubBar:
- Changed bufferedValue to an Array to han

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -159,8 +159,10 @@ global
     
     /* Behaviors */
     fixedThumbSize: false;
+    fullScreenHideControlsDelay: 3000;
     horizontalScrollPolicy: "auto";
     liveDragging: false;
+    rollOverOpenDelay: 200;
     slideDuration: 300;
     smoothScrolling: true;
     verticalScrollPolicy: "auto";
