Transferred from the Adobe Open Source Subversion Repository
Revision: 7685
Author:   hmuller@adobe.com
Date:     2009-06-09T20:24:24.179466Z

Log Message: 
-----------
Added default value for the autoThumbVisibility style.   I'd neglected to commit
this change in SVN 7644.

QE Notes:
Doc Notes: 
Bugs:
Reviewer: Evtim

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/defaults.css

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274838 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -158,6 +158,7 @@ global
     symbolColor: #000000;
     
     /* Behaviors */
+    autoThumbVisibility: true;
     fixedThumbSize: false;
     fullScreenHideControlsDelay: 3000;
     horizontalScrollPolicy: "auto";
