Transferred from the Adobe Open Source Subversion Repository
Revision: 7732
Author:   rfrishbe@adobe.com
Date:     2009-06-10T23:24:50.068084Z

Log Message: 
-----------
VideoPlayer changes: mostly PARB but fixing a few bugs as well.

Bugs:

Fix VideoPlayer bug with live streaming so the pause button comes up when we first start playing (rather than a play button).  This was caused by an underlying FLVPlayback VideoPlayer bug, and I modified the underlying VideoPlayer code to fix it.

MuteButton wasn't showing the correct volume when it first pops up in fullScreen mode.  This is because the MuteButtonSkin needed to grab the volume property when it loaded up initially.  It was doing this in the normal case, but not the fullScreen and wireframe case.

FullScreen DropShadow: Change volume bar dropshadow to be a real dropshadow instead of using RectangularDropShadow.  This is the same change as yesterday...just in the fullScreen case.

API Changes:

ScrubBar.bufferedRange:Array -> bufferedStart, bufferedEnd

VolumeBar: Add isDropDownOpen() which facades to isOpen on the DropDownController.

MuteButton:  Change “value” property to “volume”.  Add “muted” property and a mutedChange event.

Get rid of VideoPlayerVolumeBarEvent: put the constant on FlexEvent instead: FlexEvent.MUTED_CHANGE

VideoPlayer.muteButton: Changed type from ToggleButton to MuteButton.

Make DropDownList/VolumeBar.dropDownController_openHandler() and closeHandler() mx_internal instead of protected.

Class Renames:

spark.components.supportClasses.StreamingVideoSource -> spark.components.mediaClasses.StreamingVideoSource
spark.components.supportClasses.StreamItem -> spark.components.mediaClasses.StreamItem
spark.components.VideoPlayerScrubBar -> spark.components.mediaClasses.ScrubBar
spark.components.VideoPlayerVolumeBar -> spark.components.mediaClasses.VolumeBar
spark.components.VideoPlayerVolumeBarMuteButton -> spark.components.mediaClasses.MuteButton

spark.skins.default.VideoPlayerFullScreenButtonS

--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -76,6 +76,11 @@ List
 	skinClass: ClassReference("spark.skins.default.ListSkin");
 }
 
+MuteButton
+{
+    skinClass: ClassReference("spark.skins.default.mediaClasses.normal.MuteButtonSkin");
+}
+
 NumericStepper
 {
     skinClass: ClassReference("spark.skins.default.NumericStepperSkin");
@@ -94,6 +99,11 @@ RadioButton
 Scroller
 {
     skinClass: ClassReference("spark.skins.default.ScrollerSkin");
+}
+
+ScrubBar
+{
+    skinClass: ClassReference("spark.skins.default.mediaClasses.normal.ScrubBarSkin");
 }
 
 Spinner
@@ -121,19 +131,9 @@ VideoPlayer
     skinClass: ClassReference("spark.skins.default.VideoPlayerSkin");
 }
 
-VideoPlayerScrubBar
+VolumeBar
 {
-    skinClass: ClassReference("spark.skins.default.VideoPlayerScrubBarSkin");
-}
-
-VideoPlayerVolumeBar
-{
-    skinClass: ClassReference("spark.skins.default.VideoPlayerVolumeBarSkin");
-}
-
-VideoPlayerVolumeBarMuteButton
-{
-    skinClass: ClassReference("spark.skins.default.VideoPlayerVolumeBarMuteButtonSkin");
+    skinClass: ClassReference("spark.skins.default.mediaClasses.normal.VolumeBarSkin");
 }
 
 VScrollBar
