--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -161,7 +161,7 @@ global
     fixedThumbSize: false;
     fullScreenHideControlsDelay: 3000;
     horizontalScrollPolicy: "auto";
-    liveDragging: false;
+    liveDragging: true;
     rollOverOpenDelay: 200;
     slideDuration: 300;
     smoothScrolling: true;
