--- a/projects/spark/defaults.css
+++ b/projects/spark/defaults.css
@@ -20,6 +20,11 @@ Application
     skinClass: ClassReference("spark.skins.spark.ApplicationSkin");
 }
 
+Border
+{
+    skinClass: ClassReference("spark.skins.spark.BorderSkin");
+}
+
 Button
 {
     skinClass: ClassReference("spark.skins.spark.ButtonSkin");
@@ -151,6 +156,8 @@ global
     /* Looks */
     /* color: #000000; */
     baseColor: #CCCCCC;
+    borderVisible : true;
+    borderWeight : 1;
     contentBackgroundColor: #FFFFFF;
     rollOverColor: #CEDBEF;
     focusColor: #70B2EE;
